Fixed but with latest work and image on home page overlapping

--- a/layouts/default/global.css
+++ b/layouts/default/global.css
@@ -409,6 +409,10 @@ article {
 	width: 100%;
 }
 
+#content article {
+	clear: both;
+}
+
 aside { width: 100%; }
 
 aside div.googlemap {
